Feat: Main 식단 조회 api 정렬 적용